nest finished course

--- a/.env.production
+++ b/.env.production
@@ -1,7 +1,7 @@
 PORT=7000
-POSTGRESS_HOST=localhost
-POSTGRESS_USER=yaroslavmsl
-POSTGRESS_DB=nest_lesson
-POSTGRESS_PASSWORD=427315
-POSTGRESS_PORT=5432
+POSTGRES_HOST=localhost
+POSTGRES_USER=yaroslavmsl
+POSTGRES_DB=nest_lesson
+POSTGRES_PASSWORD=427315
+POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_moss
