--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 PORT=4000
-POSTGRESS_HOST=localhost
-POSTGRESS_USER=yaroslavmsl
-POSTGRESS_DB=nest_lesson
-POSTGRESS_PASSWORD=427315
-POSTGRESS_PORT=5432
+POSTGRES_HOST=postgres
+POSTGRES_USER=postgres
+POSTGRES_DB=nest_lesson
+POSTGRES_PASSWORD=postgres
+POSTGRES_PORT=5432
 PRIVATE_KEY=secret_key_less
